--- a/Cyberpsikologi.html
+++ b/Cyberpsikologi.html
@@ -81,6 +81,32 @@
         .sub-dropdown p {
             margin: 10px 0;
         }
+        .card-wrapper {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    max-width: 800px;
+    margin: 20px auto;
+    flex-wrap: wrap;
+}
+
+.card {
+    flex: 1;
+    min-width: 300px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: justify;
+}
+.card-text {
+    flex: 1;
+    min-width: 300px;    
+    padding: 20px;
+    text-align: justify;
+}
+
+
 
     </style>
 </head>
@@ -108,12 +134,12 @@
             menyebabkan dampak negatif bagi kesehatan mental, emosional, dan fisik, seperti gangguan tidur, stres, kecemasan, dan penurunan kualitas 
             hubungan sosial. Pada tingkat yang lebih parah, adiksi ini bisa mengarah pada gangguan psikologis yang memerlukan penanganan profesional.
         </div>
-
+        <!-- pertanyaan kedua -->
         <div class="pertanyaan" onclick="drop1(this)">
             Apa saja dampak dari adiksi permainan daring? 
             <i class="fas fa-chevron-down"></i>
         </div>
-
+        <!-- jawaban kedua -->
         <div class="sub-dropdown">
             <p>
                 Dampak dari adiksi permainan daring sangat bervariasi, tetapi beberapa di antaranya termasuk:
@@ -126,7 +152,72 @@
             </p>
         </div>
 
+        <div class="pertanyaan" onclick="drop1(this)">
+            aaaaaaaaaaaaa
+            <i class="fas fa-chevron-down"></i>
+        </div>
+
+        <div class="sub-dropdown">
+           aaaaaaaaaaaaaaaa
+        </div>
+        <div class="pertanyaan" onclick="drop1(this)">
+            aaaaaaaaaaaaaaaaaaaaaaaaaa
+            <i class="fas fa-chevron-down"></i>
+        </div>
+
+        <div class="sub-dropdown">
+            aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+        </div>
     </div>
+
+    <!-- Kartu 1: Card kiri, teks kanan -->
+<div class="card-wrapper">
+    <div class="card">
+        <h2 style="color: #4CAF50;">Card Kiri</h2>
+        <p>
+            Ini adalah isi dari card kiri. Letaknya di sebelah kiri.
+        </p>
+    </div>
+    <div class="card-text">
+        <h3>Teks Sebelah Kanan</h3>
+        <p>
+            Ini adalah teks yang berada di kanan card kiri. Bisa diisi dengan penjelasan tambahan.
+        </p>
+    </div>
+</div>
+
+<!-- Kartu 2: Teks kiri, card kanan -->
+<div class="card-wrapper">
+    <div class="card-text">
+        <h3>Teks Sebelah Kiri</h3>
+        <p>
+            Ini adalah teks yang berada di kiri card kanan. Bisa digunakan untuk deskripsi.
+        </p>
+    </div>
+    <div class="card">
+        <h2 style="color: #4CAF50;">Card Kanan</h2>
+        <p>
+            Ini adalah card kanan. Letaknya di sebelah kanan dari teks di atas.
+        </p>
+    </div>
+</div>
+
+    <div class="card-wrapper">
+    <div class="card">
+        <h2 style="color: #4CAF50;">Card Kiri</h2>
+        <p>
+            Ini adalah card kiri. Kamu bisa menulis informasi singkat di sini mengenai topik tertentu seperti latar belakang atau pengantar.
+        </p>
+    </div>
+    
+    <div class="card">
+        <h2 style="color: #4CAF50;">Card Kanan</h2>
+        <p>
+            Ini adalah card kanan. Gunakan untuk menampilkan data tambahan, contoh kasus, atau kutipan menarik yang mendukung konten utama.
+        </p>
+    </div>
+</div>
+
 
     <script>
         function drop1(element) {
